--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -39,8 +39,8 @@ entries:
       - title: google scholar
         url: https://scholar.google.com/citations?hl=en&user=0u4gW8kAAAAJ
 
-  - title: <a href = https://lucabutikofer.github.io/Photography/>
-            Photography
+  - title: <a href = https://lucabutikofer.github.io/>
+           root page
            </a>
 
 #   - title: all posts
