--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -40,7 +40,7 @@ entries:
         url: https://scholar.google.com/citations?hl=en&user=0u4gW8kAAAAJ
 
   - title: <a href = https://lucabutikofer.github.io/>
-           root page
+           Root page
            </a>
 
 #   - title: all posts
