--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,6 +4,11 @@
 entries:
   - title: Latest publications
     entries:     
+      - title: Goodwin, C.E.D., Bütikofer, L., Hatfield, J., Evans, P., Bullock, J.M., 
+               Storkey, J., Mead, A., Richter, G.M., Pywell, R.F., Redhead, J.W.
+               <a href = https://doi.org/10.5285/3b44375a-cbe6-468c-9395-41471054d0f3>
+               Multi-level archetypes to characterise British landscapes, farmland and farming practices.</a>
+               Environmental Research Letters (2022)
       - title: Gardner, A. S., Maclean, I. M. D., Gaston, K. J. & Bütikofer, L.
                <a href = https://doi.org/10.1016/j.agsy.2021.103084>
                Forecasting future crop suitability with microclimate data.</a>
