--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -43,7 +43,7 @@ entries:
         url: https://www.unil.ch/centre-montagne/home.html
       - title: Aubert Foundation
         url: https://www.flore-alpe.ch/en/research/
-      - title: 4° C + or more: Swiss landscapes under climate change
+      - title: 4° C + or more, Swiss landscapes under climate change
         url: https://www.gmba.unibe.ch/research/projects/4c_or_more/
       - title: google scholar
         url: https://scholar.google.com/citations?hl=en&user=0u4gW8kAAAAJ
