--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -39,12 +39,12 @@ entries:
     entries:
       - title: github
         url: https://github.com/lucabutikofer
-      - title: Centre Interdisciplinaire de Recherche sur la Montagne (CIRM)
+      - title: 4°C or more, Swiss landscapes under climate change
+        url: https://www.gmba.unibe.ch/research/projects/4c_or_more/
+      - title: Centre Interdisciplinaire de Recherche sur la Montagne
         url: https://www.unil.ch/centre-montagne/home.html
       - title: Aubert Foundation
         url: https://www.flore-alpe.ch/en/research/
-      - title: 4° C + or more, Swiss landscapes under climate change
-        url: https://www.gmba.unibe.ch/research/projects/4c_or_more/
       - title: google scholar
         url: https://scholar.google.com/citations?hl=en&user=0u4gW8kAAAAJ
 
