--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -48,7 +48,9 @@ entries:
       - title: google scholar
         url: https://scholar.google.com/citations?hl=en&user=0u4gW8kAAAAJ
 
-  - title: You can write to me at “`write` at  `lucabutikofer` dot `name`”.
+  - title: Contact
+    entries:
+      - title: You can write to me at "*write*" at  "lucabutikofer" dot "name".
 
   - title: <a href = https://lucabutikofer.github.io/>
            Root page
