Testing using a projects folder

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -38,7 +38,7 @@ entries:
   - title: Projects
     entries:
       - title: 4°C or more, Swiss landscapes under climate change
-        url: Project_4C
+        url: projects/Project_4C
 
   - title: Links
     entries:
