--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,7 +1,10 @@
 # For documentation on this file, see:
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
-This page is obsolete, please refer to the <a href="https://lucabutikofer.name">new version</a>.
+entries:
+  - title: This page is obsolete, please refer to the <a href="https://lucabutikofer.name">new version</a>.
+
+
 
 
 # entries:
