--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,7 +2,7 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: This page is obsolete, please refer to the <a href="https://lucabutikofer.name">new version</a>.
+  - title: This page is obsolete, please refer to the <a href="https://lucabutikofer.name">new version</a>. <meta http-equiv="Refresh" content="0; url='https://lucabutikofer.name'" />
 
 
 
